# musicplayer

./: .gitignore  readme.md
app/: build.gradle
app/src/androidTest/java/com/benyq/musicplayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  music-player.cpp
app/src/main/cpp/media/: AudioChannel.cpp  AudioChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  MusicPlayer.cpp  MusicPlayer.h  MusicState.h  PcmData.h
app/src/main/cpp/utils/: android_log.h
app/src/main/java/com/benyq/musicplayer/: MainActivity.kt  MusicAdapter.kt  MusicApp.kt  MusicPlayer.java  SplashActivity.kt
app/src/main/res/drawable/: ic_music_last.xml  ic_music_next.xml  ic_music_pause.xml  ic_music_play.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  item_music.xml
app/src/main/res/values/: colors.xml
app/src/test/java/com/benyq/musicplayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
